--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#top"><img src="images/curls.png"><span>Swanki Shop</span><img src="images/curls.png" class="flipped"></a>
+    <span class="nav_links" data-slide="1"><a class="navbar-brand" href="#top"><img src="images/curls.png"><span>Swanki Shop</span><img src="images/curls.png" class="flipped"></a></span>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
-      <li class="active"><a href="#slide1">About</a></li>
-      <li><a href="#slide2">Services</a></li>
-	  <li><a href="#slide3">Gallery</a></li>
-	  <li><a href="#slide4">Contact</a></li>
+      <li class="nav_links" data-slide="2"><a href="#desc">About</a></li>
+      <li class="nav_links" data-slide="3"><a href="#services">Services</a></li>
+	  <li class="nav_links" data-slide="4"><a href="#gallery">Gallery</a></li>
+	  <li class="nav_links" data-slide="5"><a href="#contact_sec">Contact</a></li>
     </ul>
 
  
@@ -311,7 +311,6 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/jquery.stellar.min.js"></script>
-	<script type="text/javascript" src="js/waypoints.min.js"></script>
 	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
 	<script src="js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
