--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <span class="nav_links" data-slide="1"><a class="navbar-brand" href="#top"><img src="images/curls.png"><span>Swanki Shop</span><img src="images/curls.png" class="flipped"></a></span>
+    <span class="nav_links" data-slide="1"><a class="navbar-brand" href="#welcome"><img src="images/curls.png"><span>Swanki Shop</span><img src="images/curls.png" class="flipped"></a></span>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -64,6 +64,8 @@
 
 
 	<div class="slide" id="desc" data-slide="2" data-stellar-background-ratio="0.5">
+			<img src="images/corner-flourish.png" class="flipped" height="" width="">
+			<img src="images/corner-flourish.png" height="" width="" class="pull-right">
 		<div class="container">
 
 			<div class="row">
@@ -77,12 +79,17 @@
 			</div>
 
 		</div>
+		
+		<img src="images/corner-flourish.png" class="upsideflip" height="" width="">
+		<img src="images/corner-flourish.png" height="" width="" class="pull-right upsidedown">
 	</div>
 
 
 
 	<div class="slide" id="services" data-slide="3" data-stellar-background-ratio="0.5">
+	
 		<div class="container">
+			
 
 			<div class="row">
 				<h2 id="our">OUR</h2>
@@ -127,6 +134,8 @@
 
 
 	<div class="slide" id="gallery" data-slide="4" data-stellar-background-ratio="0.5">
+		
+		<img src="images/flourish19.png" class="center" height="" width="">
 		<div class="container">
 
 			<h1>Gallery</h1>
@@ -252,6 +261,8 @@
 
 
 		</div>
+		
+		<img src="images/flourish19.png" class="center" id="bottom-flourish" height="" width="">
 	</div>
 	
 	<div class="slide" id="contact_sec" data-slide="5" data-stellar-background-ratio="0.5">
