--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
 
 	<div class="slide" id="desc" data-slide="2" data-stellar-background-ratio="0.5">
-			<img src="images/corner-flourish.png" class="flipped" height="" width="">
-			<img src="images/corner-flourish.png" height="" width="" class="pull-right">
+			<img src="images/corner-flourish.png" class="flipped top-flourish" height="" width="">
+			<img src="images/corner-flourish.png" height="" width="" class="pull-right top-flourish">
 		<div class="container">
 
 			<div class="row">
@@ -80,8 +80,8 @@
 
 		</div>
 		
-		<img src="images/corner-flourish.png" class="upsideflip" height="" width="">
-		<img src="images/corner-flourish.png" height="" width="" class="pull-right upsidedown">
+		<img src="images/corner-flourish.png" class="upsideflip bottom-flourish" height="" width="">
+		<img src="images/corner-flourish.png" height="" width="" class="pull-right upsidedown bottom-flourish">
 	</div>
 
 
