Gradient header and bauhas font that client wants

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
 	<title>Swanki shop</title>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Baumans' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Italianno' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Sancreek' rel='stylesheet' type='text/css'>
@@ -29,7 +29,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <span class="nav_links" data-slide="1"><a class="navbar-brand" href="#welcome"><img src="images/curls.png"><span>Swanki Shop</span><img src="images/curls.png" class="flipped"></a></span>
+    <span class="nav_links" data-slide="1"><a class="navbar-brand" href="#welcome"><img src="images/header.jpg" height="60px" ></a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,7 +51,7 @@
 		<div class="container clearfix">
 
 			<div id="content" class="center">
-				<h2 class="grid_12">Welcome to</h2>
+				<h2>Welcome to</h2>
 				<div id="brand">
 				<h1>Swanki Shop</h1>
 				<h3>A bit of posh for less </h3>
