Desc flourish and new font

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
 	<title>Swanki shop</title>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Alice' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Italianno' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Sancreek' rel='stylesheet' type='text/css'>
 	<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/prettyPhoto.css" type="text/css" media="screen" charset="utf-8" />
@@ -51,7 +50,6 @@
 		<div class="container clearfix">
 
 			<div id="content" class="center">
-				<h2 class="grid_12">Welcome to</h2>
 				<div id="brand">
 				<h1>Swanki Shop</h1>
 				<h3>A bit of posh for less </h3>
@@ -69,12 +67,10 @@
 		<div class="container">
 
 			<div class="row">
-				<div class="col-md-4"><img src="images/logo.jpg"></div>
-				<div class="col-md-8">
+				<div class="col-md-3"><img src="images/flourish13.png"></div>
+				<div class="col-md-9">
 					<h1>About us</h1>
-					Here is a description about us and how awesome we are. Here is a description about us and how awesome we are. 
-					Here is a description about us and how awesome we are. Here is a description about us and how awesome we are. 
-					Here is a description about us and how awesome we are. Here is a description about us and how awesome we are.
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum quam quis scelerisque tempor. Praesent quis sem aliquam, bibendum mi eget, posuere massa. Phasellus vel dapibus orci, non bibendum urna. Vivamus rhoncus ultrices interdum. Morbi elementum vulputate nulla, sit amet laoreet odio ornare et.  
 				</div>
 			</div>
 
