Added client text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 			<div id="content" class="center">
 				<div id="brand">
-				<h1>Swanki Shop</h1>
+				<h1>Swanki</h1>
 				<h3>A bit of posh for less </h3>
 				</div>
 			</div>
@@ -70,7 +70,11 @@
 				<div class="col-md-3"><img src="images/flourish13.png"></div>
 				<div class="col-md-9">
 					<h1>About us</h1>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum quam quis scelerisque tempor. Praesent quis sem aliquam, bibendum mi eget, posuere massa. Phasellus vel dapibus orci, non bibendum urna. Vivamus rhoncus ultrices interdum. Morbi elementum vulputate nulla, sit amet laoreet odio ornare et.  
+					Our aim is to source beautifully designed linens and accessories that will enhance your house,to make it your home.
+					From luxury filled pillows and duvets. So soft, so comfortable.
+					Pure Egyptian cotton towels that are so incredibly soft and absorbent.
+					The products we stock are meticulously selected to ensure they meet our high expectations on quality, value and savings we achieve are passed directly onto you.
+					We hope you fall in LOVE &#9825; with all of our carefully selected products.
 				</div>
 			</div>
 
@@ -101,25 +105,30 @@
 			<ul class="row">
 					<li class="serviceItem col-md-4">
 						<div>
-						<h3>Swanky Service</h3>
+						<h3>Swanki Manufacturing</h3>
 						<img src="images/top_hat.svg" height="45px" width="55px">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam malesuada nisl id orci adipiscing, non fringilla elit consectetur. Suspendisse condimentum condimentum eros.</p>
+						<p>We work very closely with selected manufacturers of filled products, pillows, cushions and duvets.
+						If you require a specific size,	style, quantity, or something a little bit special,
+						then please ask, as you will be amazed at what we can achieve.
+						</p>
 						</div>
 					</li>
 
 					<li class="serviceItem col-md-4">
 						<div>
-						<h3>Swanky Service</h3>
+						<h3>Swanki Service</h3>
 						<img src="images/top_hat.svg" height="45px" width="55px">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam malesuada nisl id orci adipiscing, non fringilla elit consectetur. Suspendisse condimentum condimentum eros.</p>
+						<p>We are here to help you. Our friendly staff are only too happy to help with your choices.
+							If we don't stock it, we will go out of	our way to source just for you.</p>
 						</div>
 					</li>
 					
 					<li class="serviceItem col-md-4">
 						<div>
-						<h3>Swanky Service</h3>
+						<h3>Swanky Contract Linens</h3>
 						<img src="images/top_hat.svg" height="45px" width="55px">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam malesuada nisl id orci adipiscing, non fringilla elit consectetur. Suspendisse condimentum condimentum eros.</p>
+						<p>We can also supply to hotel groups, guest houses and serviced apartments	in volume quantities at discounted prices.
+						We provide quality, quantity and 100% service. Delivery service available.</p>
 						</div>
 					</li>
 				</ul>
