Added client text

--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
 				<div class="col-md-4"><img src="images/logo.jpg"></div>
 				<div class="col-md-8">
 					<h1>About us</h1>
-					Here is a description about us and how awesome we are. Here is a description about us and how awesome we are. 
-					Here is a description about us and how awesome we are. Here is a description about us and how awesome we are. 
-					Here is a description about us and how awesome we are. Here is a description about us and how awesome we are.
+					Our aim is to source beautifully designed linens and accessories that will enhance your house,to make it your home.
+					From luxury filled pillows and duvets. So soft, so comfortable.
+					Pure Egyptian cotton towels that are so incredibly soft and absorbent.
+					The products we stock are meticulously selected to ensure they meet our high expectations on quality, value and savings we achieve are passed directly onto you.
+					We hope you fall in LOVE &#9825; with all of our carefully selected products.
+
 				</div>
 			</div>
 
@@ -105,25 +108,30 @@
 			<ul class="row">
 					<li class="serviceItem col-md-4">
 						<div>
-						<h3>Swanky Service</h3>
+						<h3>Swanki <br> Manufacturing</h3>
 						<img src="images/top_hat.svg" height="45px" width="55px">
-						<p>Here is a description of our very swanky services. They are so very swanky. Oh how swanky our services are.</p>
+						<p>We work very closely with selected manufacturers of filled products, pillows, cushions and duvets.
+						If you require a specific size,	style, quantity, or something a little bit special,
+						then please ask, as you will be amazed at what we can achieve.
+						</p>
 						</div>
 					</li>
 
 					<li class="serviceItem col-md-4">
 						<div>
-						<h3>Swanky Service</h3>
+						<h3>Swanki<br> Service</h3>
 						<img src="images/top_hat.svg" height="45px" width="55px">
-						<p>Here is a description of our very swanky services. They are so very swanky. Oh how swanky our services are.</p>
+						<p>We are here to help you. Our friendly staff are only too happy to help with your choices.
+							If we don't stock it, we will go out of	our way to source just for you.</p>
 						</div>
 					</li>
 					
 					<li class="serviceItem col-md-4">
 						<div>
-						<h3>Swanky Service</h3>
+						<h3>Swanki <br> Contract Linens</h3>
 						<img src="images/top_hat.svg" height="45px" width="55px">
-						<p>Here is a description of our very swanky services. They are so very swanky. Oh how swanky our services are.</p>
+						<p>We can also supply to hotel groups, guest houses and serviced apartments	in volume quantities at discounted prices.
+						We provide quality, quantity and 100% service. Delivery service available.</p>
 						</div>
 					</li>
 				</ul>
