Changed Swanki Shop to Swanki

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div id="content" class="center">
 				<h2>Welcome to</h2>
 				<div id="brand">
-				<h1>Swanki Shop</h1>
+				<h1>Swanki</h1>
 				<h3>A bit of posh for less </h3>
 				</div>
 			</div>
